--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
+  <meta name="robots" content="noindex">
   <meta chearset="utf-8">
   <title>素敵カフェ</title>
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
   <h1>素敵カフェ</h1>
-  <p>とっても素敵なカフェですよ。是非お越しください。Wifiもあります！</p>
+  <a href="mytest_YH3_vhID.html">地図へのリンク</a>
 </body>
 </html>
