--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
   <h1>素敵カフェ</h1>
-  <a href="mytest_YH3_vhID.html">地図へのリンク</a>
+  <a href="mytest_VH3_vhID.html">地図へのリンク</a>
 </body>
 </html>
