--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta name="robots" content="noindex">
   <meta chearset="utf-8">
-  <title>素敵カフェ</title>
+  <title>物件マップ</title>
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-  <h1>素敵カフェ</h1>
+  <h1>物件マップ</h1>
   <a href="mytest_VH3_vhID.html">地図へのリンク</a>
 </body>
 </html>
