--- a/mytest_VH3_vhID.html
+++ b/mytest_VH3_vhID.html
@@ -2,14 +2,16 @@
 <html lang="ja" class="">
 <head>
 <!-- Google Tag Manager -->
-  <script type="text/javascript" async="" src="https://www.google-analytics.com/analytics.js"></script>
+<!--   <script type="text/javascript" async="" src="https://www.google-analytics.com/analytics.js"></script>
   <script async="" src="https://www.googletagmanager.com/gtm.js?id=GTM-5TPX594"></script>
   <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
   new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
   j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-  })(window,document,'script','dataLayer','GTM-5TPX594');</script>
+  })(window,document,'script','dataLayer','GTM-5TPX594');</script> -->
 <!-- End Google Tag Manager -->
+  <meta name="robots" content="noindex">
+	
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes">
