--- a/mytest_VH3_vhID.html
+++ b/mytest_VH3_vhID.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="ja" class="">
 <head>
+  <meta name="robots" content="noindex">
 <!-- Google Tag Manager -->
-<!--   <script type="text/javascript" async="" src="https://www.google-analytics.com/analytics.js"></script>
+  <!-- <script type="text/javascript" async="" src="https://www.google-analytics.com/analytics.js"></script>
   <script async="" src="https://www.googletagmanager.com/gtm.js?id=GTM-5TPX594"></script>
   <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
   new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
@@ -10,8 +11,6 @@
   'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
   })(window,document,'script','dataLayer','GTM-5TPX594');</script> -->
 <!-- End Google Tag Manager -->
-  <meta name="robots" content="noindex">
-	
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes">
@@ -88,9 +87,44 @@
         font-size: 0.9em;
     }
     .mapbtn {
-        font-size: 0.9em;
+        font-size: 1.1em;
         width: 80px;
+        margin: 10px 10px 20px;
+        border-radius: 8px;
+        color:white;
+        background-color:rgba(0,83,29,1);
+        font-weight: bold;
     }
+    .mapbtn:hover{
+      opacity:0.7;
+    }
+    .mapbtn:focus {
+      outline: none;
+    }
+    .condition_item {
+        width: 120px;
+        padding-bottom: 10px;
+      }
+    @media (max-width:1020px) {
+      .mainmap {
+        display:block;
+      }
+      .container_map {
+          margin-top: 90px ;
+          padding:15px 20px;
+          background-color: rgb(248, 247, 247);
+          display: block;
+      }
+
+      .condition_selecter {
+        display: flex;
+        width: 300px;
+      }
+    }
+    @media (max-width:769px) {
+
+    }
+
   </style>
   <script>
     //マーカーの情報
@@ -356,9 +390,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- map -->
 <div class="container_map">
   <div class="side">
-      <form name = "condition">
+    <div class="condition_selecter">
+      <!-- <form name = "condition"> -->
+        <div class="condition_item">
           <p>価格：<br>
-          <select name="price_low" id="">
+            <form name = "condition">
+                        <select name="price_low" id="">
               <option value=0>下限なし</option>
               <option value=5000000>500万円</option>
               <option value=10000000>1000万円</option>
@@ -378,8 +415,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               <option value=100000000>1億円</option>
           </select>
           </p>
-          <p>----</p>
+        </div>
+        <!-- <p>----</p> -->
+        <div class="condition_item">
           <p>建物面積：<br>
+            <form name = "condition">
               <select name="floorarea_low" id="">
                   <option value=0>下限なし</option>
                   <option value=10>10㎡</option>
@@ -406,9 +446,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                   <option value=500>500㎡</option>
               </select>
           </p>
-          <p>----</p>
-          <input class="mapbtn" type="button" onclick="initMap()" value="検索">
+        </div>
+        <!-- <p>----</p> -->
+        <input class="mapbtn" type="button" onclick="initMap()" value="検索">
+        <!-- <button class="mapbtn" onclick="initMap()">検索</button> -->
       </form>
+    </div>
   </div>
   <div class="mainmap">
       <div id="newPropertiesMap"></div>
